speed test sample explainer text updates

--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -163,15 +163,15 @@ This 5G Hotspot is passing all Speed Test metrics and is providing a high-qualit
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-success.png')} />
 
-**Eligible**
-
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Test 2 or later are most recent.
-
-**Not Eligible**
+**Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
 of Test 1 is most recent as there is not enough data to calculate a Moving Average.
+
+**Test 2 and Later**
+
+This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
+these are most recent.
 
 ---
 
@@ -181,18 +181,25 @@ This 5G Hotspot has not reported Speed Test data at Test 5.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-one-miss.png')} />
 
-**Eligible**
+**Test 1**
+
+This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
+of Test 1 is most recent as there is not enough data to calculate a Moving Average.
+
+**Test 2 through 4**
 
 This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 2 through 4 and Tests 7 through 12 are the most recent.
+Tests 2 through 4 are the most recent.
 
-**Not Eligible**
-
-This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 1 or 8 are the most recent as there is not enough data to calculate a Moving Average.
+**Test 5 through 6**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 5 and 6 are the most recent as a missed Speed Test resets the Moving Average.
+of Test 5 through 6 is most recent as there is not enough data to calculate a Moving Average.
+
+**Test 7 and Later**
+
+This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
+Tests 7 and later are the most recent.
 
 ---
 
@@ -203,18 +210,25 @@ This 5G Hotspot has not reported Speed Test data during Test 5, 6, or 7. This is
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-many-miss.png')} />
 
-**Eligible**
+**Test 1**
+
+This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
+of Test 1 is most recent as there is not enough data to calculate a Moving Average.
+
+**Test 2 through 4**
 
 This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 2 through 4 and Tests 9 through 12 are the most recent.
+Tests 2 through 4 are the most recent.
 
-**Not Eligible**
-
-This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 1 or 8 are the most recent as there is not enough data to calculate a Moving Average.
+**Test 5 through 8**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 5, 6, or 7 are the most recent as there are missing Speed Test data.
+of Test 5 through 8 is most recent as there is not enough data to calculate a Moving Average.
+
+**Test 9 and Later**
+
+This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
+Tests 9 and later are the most recent.
 
 ---
 
@@ -225,14 +239,15 @@ within the passing range.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-one-fail.png')} />
 
-**Not Eligible**
+**Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
 of Test 1 is most recent as there is not enough data to calculate a Moving Average.
 
-**Eligible**
+**Test 2 and Later**
 
-This 5G Hotspot **will** be eligible for rewards during all Reward Periods after Test 2.
+This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
+Tests 2 and later are the most recent.
 
 ---
 
@@ -243,18 +258,26 @@ fail for Test 6, 7, and 8.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-many-fail.png')} />
 
-**Eligible**
-
-This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
-Tests 2 through 5 and Tests 9 through 12 are the most recent.
-
-**Not Eligible**
+**Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
 of Test 1 is most recent as there is not enough data to calculate a Moving Average.
 
+**Test 2 through 5**
+
+This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
+Tests 2 through 5 are the most recent.
+
+**Test 6 through 8**
+
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Tests 6 through 8 are the most recent as at least one Speed Test metric has failed.
+of Tests 6 through 8 are the most recent as at least one Speed Test metric Moving Average has not
+met or exceeded the required values.
+
+**Test 9 and Later**
+
+This 5G Hotspot **will** be eligible for rewards during the Reward Periods for which the results of
+Tests 9 and later are the most recent.
 
 ---
 
