--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -20,24 +20,28 @@ and receivers ("Witness") of PoC activity, you can read more here:
 While all current 5G Hotspot models _also_ participate in the LoRaWAN network and PoC, the CBRS
 Small Cell and 5G aspects of a 5G Hotspot require a new approach to validating PoC.
 
-:::info One Way Traffic
+**One Way Traffic**
 
 CBRS Small Cell Radios can only operate as transmitters, they are not able to receive incoming data
 and thus can not "hear" one another directly.
 
-:::
-
 ## 5G PoC Roadmap
 
+:::info Current Progress
+
+We are currently in Stage 1, Genesis Phase 2:
+[Time Period Triggered Rewards with Minimum Delay](/5g-on-helium/5g-poc#genesis-phase-2-time-period-triggered-rewards-with-minimum-delay)
+
+:::
+
 - **Stage 1: ** Genesis Rewards
-  - Genesis Phase 1:
+  - _Genesis Phase 1_:
     [Time Period Triggered Rewards](/5g-on-helium/5g-poc#genesis-phase-1-time-period-triggered-rewards)
-  - Genesis Phase 2:
+  - _Genesis Phase 2_:
     [Time Period Triggered Rewards with Minimum Delay](/5g-on-helium/5g-poc#genesis-phase-2-time-period-triggered-rewards-with-minimum-delay)
-    **(current)**
-  - Genesis Phase 3:
+  - _Genesis Phase 3_:
     [Speed Test and Quality of Service](/5g-on-helium/5g-poc#genesis-phase-3-speed-tests-and-quality-of-service)
-  - Genesis Phase 4:
+  - _Genesis Phase 4_:
     [Heartbeats and Consistency of Service](/5g-on-helium/5g-poc#genesis-phase-4-heartbeats-and-reliability-of-service)
 - **Stage 2: ** 5G Mappers Proof of Coverage
 - **Stage 3: ** Additional Methods of Proof of Coverage
@@ -137,7 +141,7 @@ of the data. This moving average is reset following a speed test gap of `>12 hou
 
 :::note Moving Average
 
-The "Moving Average", also known as a "Rolling Average" is the average of at least 2 but no more
+The "Moving Average", also known as a "Rolling Average", is the average of at least 2 but no more
 than 6 most recent speed test results for each download, upload, and latency.
 
 This means that when more than 6 Speed Test results are available, results that came before 6th most
